# SmartMirror

./: CMakeLists.txt  README.md  TODO
src/: GraphicsManager.cpp  GraphicsManager.h  HttpClient.cpp  HttpClient.h  Renderable.h  glad.c  main.cpp  shader_s.cpp  shader_s.h
src/Modules/: MirrorMod.cpp  MirrorMod.h
src/Modules/HandTracking/: HandTrackingM.cpp  HandTrackingM.h
src/Modules/HandTracking/LM/: vertexshader.vert
src/Modules/Test/: TestModule.cpp  TestModule.h
src/Modules/Time/: TimeModule.cpp  TimeModule.h
src/Modules/Weather/: WeatherModule.cpp  WeatherModule.h
src/ShapeLibrary/: ShapeData.h  ShapeGen.cpp  ShapeGen.h  Vertex.h
